deploy: cors config